--- a/styles/style.css
+++ b/styles/style.css
@@ -74,14 +74,24 @@ input[type="text"] {
   width: 686px;
   color: #ffffff;
 }
+.div1 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 124px;
+  align-items: center;
+}
 .div2 {
   width: 253px;
   height: 1px;
+  background-color: black;
+  margin-left: 339px;
 }
 .div3 {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 .img2 {
   width: 100px;
@@ -93,4 +103,49 @@ input[type="text"] {
 .div4 {
   width: 253px;
   height: 1px;
+  background-color: black;
+}
+.motherdiv1 {
+  margin-top: 102px;
+}
+.child1 {
+  display: flex;
+  flex-direction: row;
+  margin-left: 20px;
+}
+.child1 div {
+  margin-left: 50px;
+}
+.child1 img {
+  width: 250px;
+  height: 250px;
+}
+.child1 h1 {
+  font-family: JejuMyeongjo;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.child2 {
+  display: flex;
+  flex-direction: row;
+  margin-left: 20px;
+  margin-top: 50px;
+}
+.child2 div {
+  margin-left: 50px;
+}
+.child2 img {
+  width: 250px;
+  height: 250px;
+}
+.child2 h1 {
+  font-family: JejuMyeongjo;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: left;
 }
