--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .header1 {
   margin-top: 27px;
   margin-left: 79px;
@@ -50,16 +56,19 @@ input[type="text"] {
 .headimg2 {
   margin-left: 14px;
 }
-.headimg3 {
+/* .headimg3 {
   margin-left: 14px;
-}
+} */
 .sec1 {
   margin-top: 8px;
+  position: relative;
+  display: inline-block;
+  width: 100%;
 }
 .img1 {
   width: 100%;
   height: 600px;
-  position: relative;
+  /* position: relative; */
 }
 .h1 {
   font-family: Judson;
@@ -69,8 +78,9 @@ input[type="text"] {
   letter-spacing: 0em;
   text-align: center;
   position: absolute;
-  top: 300px;
-  left: 450px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 686px;
   color: #ffffff;
 }
@@ -110,14 +120,16 @@ input[type="text"] {
 }
 .child1 {
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
   margin-left: 20px;
 }
 .child1 div {
   margin-left: 50px;
+  width: 300px;
 }
 .child1 img {
-  width: 250px;
+  width: 100%;
   height: 250px;
 }
 .child1 h1 {
@@ -130,15 +142,17 @@ input[type="text"] {
 }
 .child2 {
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
   margin-left: 20px;
   margin-top: 50px;
 }
 .child2 div {
   margin-left: 50px;
+  width: 300px;
 }
 .child2 img {
-  width: 250px;
+  width: 100%;
   height: 250px;
 }
 .child2 h1 {
