--- a/styles/style.css
+++ b/styles/style.css
@@ -163,3 +163,98 @@ input[type="text"] {
   letter-spacing: 0em;
   text-align: left;
 }
+.footdiv {
+  width: 100%;
+  height: 400px;
+  background-color: darkgrey;
+  display: flex;
+  flex-direction: row;
+}
+.footdiv1 {
+  margin-left: 35px;
+}
+.fchdiv1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.fimg1 {
+  width: 100px;
+  height: 100px;
+}
+.fchdiv1 h1 {
+  font-family: Kaisei Decol;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 46px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.footdiv h2 {
+  font-family: Kameron;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-left: 20px;
+}
+.footdiv1 ul {
+  margin-top: 44px;
+  margin-left: 20px;
+}
+.footdiv1 li {
+  margin-top: 17px;
+}
+.fchdiv2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
+  margin-top: 29px;
+}
+.fimg2 {
+  margin-left: 29px;
+}
+.footdiv2 {
+  margin-left: 278px;
+}
+.fchdiv3 {
+  display: flex;
+  flex-direction: column;
+}
+.fchdiv3 h2 {
+  width: 45px;
+  height: 36px;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.footdiv2 h1 {
+  margin-top: 37px;
+}
+.footdiv3 {
+  margin-left: 183px;
+}
+.fchdiv4 h2 {
+  width: 45px;
+  height: 36px;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.footdiv3 h1 {
+  margin-top: 37px;
+}
+.footdiv4 input[type="text"] {
+  width: 339px;
+  height: 40px;
+  border-radius: 40px;
+  border: none;
+  background: white;
+  padding: 5px 11px;
+}
