--- a/styles/style.css
+++ b/styles/style.css
@@ -258,3 +258,81 @@ input[type="text"] {
   background: white;
   padding: 5px 11px;
 }
+.abimg1 {
+  height: 400px;
+  margin-left: 330px;
+}
+.absec1 {
+  position: relative;
+  margin-top: 60px;
+}
+.abimg2 {
+  width: 100%;
+  height: 523px;
+}
+.abdiv2 {
+  position: absolute;
+  top: 0px;
+  background: #00000080;
+  height: 523px;
+  width: 50%;
+}
+.abdiv2 h1 {
+  margin-top: 80px;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 50px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.div222 {
+  width: 253px;
+  height: 1px;
+  background-color: black;
+  margin-left: 400px;
+}
+.newmothdiv {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.ch1ch1 {
+  max-width: 600px;
+  background-color: darkgray;
+  height: 315px;
+}
+.ch1h1 {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 40px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-bottom: 20px;
+  color: white;
+}
+.ch1h2 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 35px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: white;
+}
+.ch1ch2 img {
+  width: 600px;
+  height: 400px;
+}
+.div11 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 124px;
+  align-items: center;
+  margin-bottom: 100px;
+}
+.div22 {
+  width: 253px;
+  height: 1px;
+  background-color: black;
+  margin-left: 230px;
+}
