--- a/styles/style.css
+++ b/styles/style.css
@@ -163,16 +163,20 @@ input[type="text"] {
   letter-spacing: 0em;
   text-align: left;
 }
+
+footer {
+  background-color: darkgrey;
+  width: 100%;
+  padding: 30px 50px;
+  box-sizing: border-box;
+}
+
 .footdiv {
   width: 100%;
-  height: 400px;
-  background-color: darkgrey;
   display: flex;
   flex-direction: row;
 }
-.footdiv1 {
-  margin-left: 35px;
-}
+
 .fchdiv1 {
   display: flex;
   flex-direction: row;
@@ -250,6 +254,13 @@ input[type="text"] {
 .footdiv3 h1 {
   margin-top: 37px;
 }
+
+.footdiv4 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .footdiv4 input[type="text"] {
   width: 339px;
   height: 40px;
